--- a/main/feedback.html
+++ b/main/feedback.html
@@ -529,7 +529,7 @@
                                             <h5 class="main-footer__nav-header">Quick Links</h5>
                                             <div class="main-footer__nav-link"><a href="about">About Us</a></div>
                                             <div class="main-footer__nav-link"><a href="refer">Referral Form</a></div>
-                                            <div class="main-footer__nav-link"><a href="../faqs">FAQs</a></div>
+                                            <div class="main-footer__nav-link"><a href="faqs">FAQs</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Services</h5>
