--- a/main/feedback.html
+++ b/main/feedback.html
@@ -533,7 +533,7 @@
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Services</h5>
-                                            <div class="main-footer__nav-link"><a href="echo">Echocardiogram</a></div>
+                                            <div class="main-footer__nav-link"><a href="services/echo">Echocardiogram</a></div>
                                             <div class="main-footer__nav-link"><a href="stressecho">Stress Echocardiogram</a></div>
                                             <div class="main-footer__nav-link"><a href="holter">Holter Monitoring</a></div>
                                         </div>
