--- a/main/feedback.html
+++ b/main/feedback.html
@@ -541,7 +541,7 @@
                                             <h5 class="main-footer__nav-header">Locations</h5>
                                             <div class="main-footer__nav-link"><a href="locations/nmelb">North Melbourne</a></div>
                                             <div class="main-footer__nav-link"><a href="locations/epworth">Epworth Richmond</a></div>
-                                            <div class="main-footer__nav-link"><a href="../locations/mponds">Moonee Ponds</a></div>
+                                            <div class="main-footer__nav-link"><a href="locations/mponds">Moonee Ponds</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Contact</h5>
