--- a/main/feedback.html
+++ b/main/feedback.html
@@ -546,7 +546,7 @@
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Contact</h5>
                                             <div class="main-footer__nav-link"><a href="contact">General Enquiries</a></div>
-                                            <div class="main-footer__nav-link"><a href="../book">Request Appoinment</a></div>
+                                            <div class="main-footer__nav-link"><a href="book">Request Appoinment</a></div>
                                             <div class="main-footer__nav-link"><a href="../feedback">Submit Feedback</a></div>
                                             <div class="main-footer__nav-link"><a href="tel:1800880770">1800 880 770</a></div>
                                         </div>
