--- a/main/feedback.html
+++ b/main/feedback.html
@@ -605,7 +605,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/menu.js"></script>
     <script type="text/javascript" src="assets/js/cursor.js"></script>
-    <script type="text/javascript" src="../assets/js/progressbar.js"></script>
+    <script type="text/javascript" src="assets/js/progressbar.js"></script>
     <script type="text/javascript" src="../assets/js/daygreeting.js"></script>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1Ijoiam9ub2RqbGVlIiwiYSI6ImNqejBrdWV6YjAwMjgzbnAwc3NvdDhoZHAifQ.naL_6lnZjH31Wwc31n4SgA';
