--- a/main/feedback.html
+++ b/main/feedback.html
@@ -497,7 +497,7 @@
                 <div class="col-10 py-3 text3 container container--adaptive">
                     <div class="" style="text-align: center">
                         <div id="button1">
-                            <a class="mybtn link text3" href="echo"><span>Echocardiography</span></a>
+                            <a class="mybtn link text3" href="dfeedback"><span>Doctors</span></a>
                             <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                         </div>
                         <div id="button1">
