--- a/main/book2.html
+++ b/main/book2.html
@@ -154,7 +154,7 @@
                     </li>-->
                 </ol>
             </nav>
-            <nav class="mobmenu purple">
+            <nav class="mobmenu purple-bg">
                 <a href="/"><img src="assets/img/logomark-final%20white.png" style="max-height: 30px; width: auto; margin: 16px 0 0 20px"></a>
                 <div class="button_container purple" id="toggle" data-target="#overlay" aria-controls="navMobile" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="top"></span>
