--- a/main/locations/nmelb.html
+++ b/main/locations/nmelb.html
@@ -462,7 +462,7 @@
                     </li>-->
                 </ol>
             </nav>
-            <nav class="mobmenu" style="background: #8737FF !important">
+            <nav class="mobmenu">
                 <a href="../"><img src="../assets/img/logomark-final%20white.png" style="max-height: 30px; width: auto; margin: 16px 0 0 20px"></a>
                 <div class="button_container purple" id="toggle" data-target="#overlay" aria-controls="navMobile" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="top"></span>
