--- a/main/search.html
+++ b/main/search.html
@@ -462,7 +462,7 @@
             </div>
         </div>
         <div id="ha-header">
-            <nav class="menu ha-header ha-header-shrink">
+            <nav class="menu ha-header ha-header-shrink purple-bg">
                 <ol class="dtmenu text">
                     <li class="menu-item"><a href="/"><img src="assets/img/icon.png" style="max-height: 40px; width: auto"></a></li>
                     <li class="menu-item dtmenuitem"><a href="about.html">About</a></li>
