--- a/main/search.html
+++ b/main/search.html
@@ -509,7 +509,7 @@
                     </li>
                 </ol>
             </nav>
-            <nav class="mobmenu">
+            <nav class="mobmenu purple">
                 <a href="/"><img src="assets/img/icon.png" style="max-height: 30px; width: auto; margin: 16px 0 0 20px"></a>
                 <div class="button_container" id="toggle" data-target="#overlay" aria-controls="navMobile" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="top"></span>
