--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -540,7 +540,7 @@
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
                 <div class="col-12">
-                    <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px">Patient Referral</h1>
+                    <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px">Doctor Feedback</h1>
                 </div>
             </div>
             <div class="container-fluid feature row" style="background: var(--color-bg); margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
