--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -823,7 +823,7 @@
                                                 <input type="radio" name="location" value="North Melbourne " class="" id="nmelbradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
                                                 <label for="nmelbradio" class="textc">Patient Appointment</label><br>
                                                 <input type="radio" name="location" value="Moonee Ponds " class="" id="mpondsradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="mpondsradio" class="textc">Moonee Ponds</label><br>
+                                                <label for="mpondsradio" class="textc">Report/Letter Delivery</label><br>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Richmond</label>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
