--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -827,7 +827,7 @@
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Report/Letter Turnaround</label>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="richmondradio" class="textc">Richmond</label>
+                                                <label for="richmondradio" class="textc">Unsatisfactory Diagnosis</label>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Richmond</label>
                                             </div>
