--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -829,7 +829,7 @@
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Unsatisfactory Diagnosis</label>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="richmondradio" class="textc">Richmond</label>
+                                                <label for="richmondradio" class="textc">Unsatisfactory Communication</label>
                                             </div>
 
                                             <div class="input-wrapper">
