--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -820,7 +820,7 @@
 
                                             <p class="mt-3 textc reqstar">Content of Feedback</p>
                                             <div>
-                                                <input type="radio" name="location" value="North Melbourne " class="" id="nmelbradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
+                                                <input type="radio" name="fbcontent" value="Patient Appointment" class="" id="papptradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
                                                 <label for="nmelbradio" class="textc">Patient Appointment</label><br>
                                                 <input type="radio" name="location" value="Moonee Ponds " class="" id="mpondsradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="mpondsradio" class="textc">Report/Letter Delivery</label><br>
