--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -822,7 +822,7 @@
                                             <div>
                                                 <input type="radio" name="fbcontent" value="Patient Appointment " class="" id="papptradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
                                                 <label for="papptradio" class="textc">Patient Appointment</label><br>
-                                                <input type="radio" name="location" value="Moonee Ponds " class="" id="repdelradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="fbcontent" value="Report/Letter Delivery " class="" id="repdelradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="mpondsradio" class="textc">Report/Letter Delivery</label><br>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Report/Letter Turnaround</label>
