--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -824,7 +824,7 @@
                                                 <label for="papptradio" class="textc">Patient Appointment</label><br>
                                                 <input type="radio" name="fbcontent" value="Report/Letter Delivery " class="" id="repdelradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="repdelradio" class="textc">Report/Letter Delivery</label><br>
-                                                <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="fbcontent" value="Report/Letter Turnaround " class="" id="repturnradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Report/Letter Turnaround</label>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Unsatisfactory Diagnosis</label>
