--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -828,7 +828,7 @@
                                                 <label for="repturnradio" class="textc">Report/Letter Turnaround</label>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Diagnosis " class="" id="unsatdiagradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatdiagradio" class="textc">Unsatisfactory Diagnosis</label>
-                                                <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Unsatisfactory Communication</label>
                                             </div>
 
