--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -831,6 +831,20 @@
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatcommradio" class="textc">Unsatisfactory Communication</label>
                                             </div>
+                                            
+                                            <p class="mt-3 textc reqstar">Content of Feedback</p>
+                                            <div>
+                                                <input type="radio" name="fbcontent" value="Patient Appointment " class="" id="papptradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
+                                                <label for="papptradio" class="textc">Patient Appointment</label><br>
+                                                <input type="radio" name="fbcontent" value="Report/Letter Delivery " class="" id="repdelradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="repdelradio" class="textc">Report/Letter Delivery</label><br>
+                                                <input type="radio" name="fbcontent" value="Report/Letter Turnaround " class="" id="repturnradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="repturnradio" class="textc">Report/Letter Turnaround</label><br>
+                                                <input type="radio" name="fbcontent" value="Unsatisfactory Diagnosis " class="" id="unsatdiagradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="unsatdiagradio" class="textc">Unsatisfactory Diagnosis</label><br>
+                                                <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="unsatcommradio" class="textc">Unsatisfactory Communication</label>
+                                            </div>
 
                                             <div class="input-wrapper">
                                                 <textarea name="notes" title="Notes" id="notes" value="" class="form__input txta" style="overflow: hidden"></textarea>
